# propersats

./: GEMINI.md  README.md  simulate_history.sh
backend/: .env  main.py  pyproject.toml  test_lnd_connection.py  test_r_hash.py
backend/services/: lightning.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: flow.spec.ts
tests/: conftest.py
tests/backend/: test_app.py  test_escrow.py  test_health.py  test_lightning.py
